# kitchen_registration

./: CMakeLists.txt  README.md  package.xml
config/: icp_registration.rviz
euslisp/: reaching-with-icp.l
launch/: icp_registration.launch  icp_registration.launch~  pointcloud_to_pcd.launch  tilt_laser_listener.launch  tilt_laser_listener.launch~
scripts/: extract_large_pointcloud.py
