<?xml version="1.0"?>
<package format="2">
  <name>kitchen_registration</name>
  <version>0.0.0</version>
  <description>The kitchen_registration package</description>

  <maintainer email="708yamaguchi@gmail.com">Naoya Yamaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_pcl_ros</build_depend>
  <build_export_depend>jsk_pcl_ros</build_export_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
</package>
